Closed
Bug 526436
Opened 16 years ago
Closed 16 years ago
AIX Compilation error for 3.7a1pre source js/src/jsvector.h", line 677.21: 1540-0274 (S) The name lookup for "PointerRangeSize" did not find a declaration
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a1
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | .14-fixed |
| status1.9.1 | --- | unaffected |
People
(Reporter: shailen.n.jain, Assigned: ul-mcamafia)
References
Details
(Keywords: verified1.9.2)
Attachments
(1 file, 1 obsolete file)
|
1.27 KB,
patch
|
luke
:
review+
dveditz
:
approval1.9.2.14+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.4) Gecko/20091016 Firefox/3.5.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.4) Gecko/20091016 Firefox/3.5.4
While compiling Mozilla Firefox source for 3.7a1pre, getting
the below error.
"/home/firefox/mozilla-central/js/src/jsvector.h", line 677.21: 1540-0274 (S) The name lookup for "PointerRangeSize" did not find a declaration.
"/home/firefox/mozilla-central/js/src/jsvector.h", line 677.21: 1540-1292 (I) Static declarations are not considered for a function call if the function is not qualified.
"/home/firefox/mozilla-central/js/src/jsvector.h", line 674.1: 1540-0700 (I) The previous message was produced while processing "js::Vector<unsigned short,32,js::ContextAllocPolicy>::append<unsigned short>(const unsigned short *, const unsigned short *)".
"/home/firefox/mozilla-central/js/src/jsarray.cpp", line 1374.1: 1540-0700 (I) The previous message was produced while processing "array_toSource(JSContext *, uintN, jsval *)".
"/home/firefox/mozilla-central/js/src/jsvector.h", line 677.21: 1540-0274 (S) The name lookup for "PointerRangeSize" did not find a declaration.
"/home/firefox/mozilla-central/js/src/jsvector.h", line 677.21: 1540-1292 (I) Static declarations are not considered for a function call if the function is not qualified.
"/home/firefox/mozilla-central/js/src/jsvector.h", line 674.1: 1540-0700 (I) The previous message was produced while processing "js::Vector<unsigned short,32,js::ContextAllocPolicy>::append<char>(const char *, const char *)".
"/home/firefox/mozilla-central/js/src/jsvector.h", line 418.13: 1540-0700 (I) The previous message was produced while processing "js::js_AppendLiteral<unsigned short,32,js::ContextAllocPolicy,3>(Vector<unsigned short,32,js::ContextAllocPolicy> &, const char (&)[3])".
"/home/firefox/mozilla-central/js/src/jsarray.cpp", line 1454.18: 1540-0700 (I) The previous message was produced while processing "array_toSource(JSContext *, uintN, jsval *)".
"/home/firefox/mozilla-central/js/src/jscntxt.h", line 1580.44: 1540-1281 (W) "offsetof" cannot be applied to "struct JSContext". It is not a POD (plain old data) type.
gmake[1]: *** [jsarray.o] Error 1
Reproducible: Always
Steps to Reproduce:
1. Build Mozilla Firefox 3.7a1pre build on AIX with Gnome RPMS of 64 bit
version.
2.
3.
Actual Results:
Build fails with the above error.
Expected Results:
No build failure
I checked with compiler team for this issue and below is the explanation I
received for the compiler behaviour.
' In the C++ Standard (ISO/IEC 14882), section 14.6.4.2 "Candidate functions"
describes that: for an unqualified function call that depends on a template
parameter, only function declarations with external linkage from the template
definition context should be found.
In this scenario the "static" function results in internal linkage and
therefore cannot be found.
Approaches
1. One solution is to make the function non-static by removing "static".
2. Alternatively we may make the function-call qualified. '
The patch submitted has taken first approach of making the function non-static by removing static since the 2nd approach does not resolve the compilation error.
Attachment #410175 -
Flags: review?(mak77)
Updated•16 years ago
|
Assignee: nobody → shailen.n.jain
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•16 years ago
|
Attachment #410175 -
Flags: review?(mak77) → review?(shaver)
Comment 2•16 years ago
|
||
forwarding review, i'm not a js peer.
Comment 3•16 years ago
|
||
Comment on attachment 410175 [details] [diff] [review]
Patch V 1
correcting request
Attachment #410175 -
Flags: review?(shaver) → review?(sayrer)
Can you please review the patch and let me know if anything needs to be changed.
Attachment #410175 -
Flags: review?(sayrer) → review?(brendan)
Comment 7•16 years ago
|
||
Comment on attachment 410175 [details] [diff] [review]
Patch V 1
Hi Shailen, I'll get right on it; sorry for the delays.
Attachment #410175 -
Flags: review?(brendan) → review?(lw)
Comment 8•16 years ago
|
||
Comment on attachment 410175 [details] [diff] [review]
Patch V 1
Oh right, how could I have forgotten Section 14.6.4.2 ;) Thank you for investigating the source of this compiler error! Could you also remove the static from RoundUpPow2 (above) since it may later be looked up in an argument-dependent context?
Attachment #410175 -
Flags: review?(lw) → review+
Attachment #410175 -
Attachment is obsolete: true
Attachment #418480 -
Flags: review?(lw)
Updated•16 years ago
|
Attachment #418480 -
Flags: review?(lw) → review+
Keywords: checkin-needed
Attachment #418480 -
Flags: superreview?(brendan)
Comment 10•16 years ago
|
||
Luke isn't a JS peer, according to http://www.mozilla.org/about/owners.html#javascript, so removing checkin-needed until a JS owner/peer can review the patch.
Component: General → JavaScript Engine
Keywords: checkin-needed
Product: Firefox → Core
QA Contact: general → general
Comment 11•16 years ago
|
||
(In reply to comment #10)
> Luke isn't a JS peer, according to
> http://www.mozilla.org/about/owners.html#javascript, so removing checkin-needed
> until a JS owner/peer can review the patch.
As per bug 526446, comment #14, Luke is a peer, so re-adding checkin-needed.
Keywords: checkin-needed
Updated•16 years ago
|
Attachment #418480 -
Flags: superreview?(brendan)
Comment 12•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
| Assignee | ||
Comment 13•15 years ago
|
||
Comment on attachment 418480 [details] [diff] [review]
Revised patch
This bug isn't fixed on mozilla-1.9.2 branch yet.
Attachment #418480 -
Flags: approval1.9.2.8?
| Assignee | ||
Updated•15 years ago
|
Attachment #418480 -
Flags: approval1.9.2.9?
| Assignee | ||
Updated•15 years ago
|
Attachment #418480 -
Flags: approval1.9.2.14?
| Assignee | ||
Comment 14•15 years ago
|
||
Risc: none as fixed on trunk/moz193 for more than a year.
So renewing branch approval request.
status1.9.1:
--- → unaffected
| Assignee | ||
Updated•15 years ago
|
Assignee: shailen.n.jain → ul.mcamafia
Comment 15•15 years ago
|
||
Comment on attachment 418480 [details] [diff] [review]
Revised patch
Approved for 1.9.2.14, a=dveditz for release-drivers
Attachment #418480 -
Flags: approval1.9.2.14? → approval1.9.2.14+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [attachment 418480 to moz-192]
Comment 16•15 years ago
|
||
status1.9.2:
--- → .13-fixed
Updated•15 years ago
|
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: [attachment 418480 to moz-192]
| Assignee | ||
Updated•15 years ago
|
Keywords: verified1.9.2
You need to log in
before you can comment on or make changes to this bug.
Description
•