Bug 526436 - "AIX Compilation error for 3.7a1pre source js/src/jsvector.h", line 677.21: 1540-0274 (S) The name lookup for "PointerRangeSize" did not find a declaration" [r=lw]